Class로 querySelectAll을 사용하여 모든 버튼을 반복문으로 가져오고 가져온 것을 반복문으로 이벤트 핸들러 실행

--- a/03_Front/household_account_book/style.css
+++ b/03_Front/household_account_book/style.css
@@ -181,14 +181,21 @@ header{
     gap: 10px;
 }
 
-#filter-income, 
-#filter-balance{
+#filter-income{
     color: rgb(22, 102, 22);
 }
 
 #filter-expense{
     color: crimson;
 }
+
+/* .balance.color-crimson{
+    color: crimson;
+}
+
+.balance.color-green{
+    color: rgb(22, 102, 22);
+} */
 
 #list{
     width: 100%;
