모든 색상변경을 class를 추가하여 변환

--- a/03_Front/household_account_book/style.css
+++ b/03_Front/household_account_book/style.css
@@ -185,12 +185,20 @@ header{
     gap: 10px;
 }
 
-#filter-income{
+.total.income{
     color: rgb(22, 102, 22);
 }
 
-#filter-expense{
+.total.expense{
     color: crimson;
+}
+
+.balance.plus{
+    color: rgb(22, 102, 22);
+}
+
+.balance.minus{
+    color: crimson
 }
 
 #list{
@@ -207,7 +215,7 @@ header{
     font-size: 14px;
 }
 
-#date{
+.date{
     font-size: 12px;
     color: gray;
 }   
