--- a/03_Front/household_account_book/style.css
+++ b/03_Front/household_account_book/style.css
@@ -22,15 +22,7 @@ div{
     width: 100%;
 }
 
-header{
-    font-size: 18px;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-
 .container{
-    border: 1px solid none;
     border-radius: 8px;
     box-shadow: 0 20px 40px rgba(255, 245, 245, 0.336);
     background: linear-gradient(135deg, #94B4C1, #547792);
@@ -48,17 +40,20 @@ header{
 
 #balance{
     font-size: 28px;
-    color: rgb(22, 102, 22);
+    color: black; /* 기본 색상을 검은색으로 설정 */
 }
 
 .header{
     width: 100%;
+    font-size: 18px;
+    color: white;
+    text-align: center;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
     border-bottom: 1px solid rgb(238, 238, 238);
-    padding: 0;
+    padding-bottom: 10px;
 }
 
 .input-container{
@@ -84,7 +79,7 @@ header{
     border: 2px solid #758596;
 }
 
-.income-Expense-container{
+.income-expense-container{
     background: white;
     display: flex;
     align-items: center;
@@ -93,7 +88,7 @@ header{
     padding: 10px 0px;
 }
 
-.income-Expense-container button{
+.income-expense-container button{
     padding: 8px 14px;
     font-size: 16px;
     border-radius: 12px;
@@ -101,13 +96,13 @@ header{
     background: white;
 }
 
-.income-Expense-container button:hover{
+.income-expense-container button:hover{
     cursor: pointer;
     opacity: 0.9;
     scale: 0.99;
 }
 
-.income-Expense-container button.clicked{
+.income-expense-container button.clicked{
     background: rgb(22, 102, 22);
     color: white;
 }
@@ -193,12 +188,16 @@ header{
     color: crimson;
 }
 
-.balance.plus{
+.balance.plus, #balance.plus {
     color: rgb(22, 102, 22);
 }
 
-.balance.minus{
-    color: crimson
+.balance.minus, #balance.minus {
+    color: crimson;
+}
+
+.balance.zero {
+    color: black;
 }
 
 #list{
@@ -231,16 +230,7 @@ header{
     color: rgb(22, 102, 22);
 }
 
-.income > button{
-    padding: 2px 8px;
-    font-size: 14px;
-    border-radius: 4px;
-    border: none;
-    background: rgb(252, 81, 115);
-    color: white;
-}
-
-.income > button:hover{
+.income > button:hover, .expense > button:hover{
     cursor: pointer;
     opacity: 0.9
 }
@@ -256,16 +246,11 @@ header{
     color: crimson;
 }
 
-.expense > button{
+.income > button, .expense > button{
     padding: 2px 8px;
     font-size: 14px;
     border-radius: 4px;
     border: none;
     background: rgb(252, 81, 115);
     color: white;
-}
-
-.expense > button:hover{
-    cursor: pointer;
-    opacity: 0.9
 }
